# jpg-cli

./: jpg-to.cabal
