name:                jpg-to
version:             0.1.0.0
description:         Get a jpg url from a string
license:             MIT
license-file:        LICENSE
author:              Doug Patti
maintainer:          douglas.patti@gmail.com
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/dpatti/jpg-to.git

library
  hs-source-dirs:    src
  exposed-modules:   Network.Images.Search
  default-language:  Haskell2010
  build-depends:     base
                   , aeson
                   , base-prelude
                   , lens
                   , lens-aeson
                   , random
                   , text
                   , wreq

executable jpg-to
  main-is:           src/Main.hs
  default-language:  Haskell2010
  build-depends:     base
                   , base-prelude
                   , configurator
                   , jpg-to
                   , text
